--- a/lcl/languages/lclstrconsts.po
+++ b/lcl/languages/lclstrconsts.po
@@ -586,8 +586,8 @@ msgstr ""
 msgid "Green"
 msgstr ""
 
-#: lclstrconsts.rsgridfiledoesnotexists
-msgid "Grid file doesn't exists"
+#: lclstrconsts.rsgridfiledoesnotexist
+msgid "Grid file doesn't exist"
 msgstr ""
 
 #: lclstrconsts.rsgridhasnocols
